--- a/website/app/elements/patient-form/gender-selector.html
+++ b/website/app/elements/patient-form/gender-selector.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-ripple/paper-ripple.html"/>
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html"/>
@@ -17,83 +7,98 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/iron-validator-behavior/iron-validator-behavior.html"/>
 
 <dom-module id="gender-selector">
-  <template>
   <style>
-		paper-item {
-			width: calc(49% - 32px);
-			display: inline-block;
-			line-height: 50px;
-			position: relative;
-			cursor: pointer;
+    paper-item {
+      width: calc(49% - 32px);
+      display: inline-block;
+      line-height: 50px;
+      position: relative;
+      cursor: pointer;
       background-color: transparent;
-		}
+    }
 
     paper-menu {
       background-color: transparent;
     }
 
-		:host {
-			--paper-menu-selected-item: {
-				 background-color: var(--accent-color);
-				 color: var(--text-primary-color);
-		    };
+    paper-menu.invalid {
+      border: 2px solid #db4437;
+    }
 
-			--paper-menu-focused-item: {
-				 background-color: var(--accent-color);
-				 color: var(--text-primary-color);
-		    };
-		}
+    :host {
+      --paper-menu-selected-item: {
+        background-color: var(--accent-color);
+        color: var(--text-primary-color);
+      };
 
-		paper-ripple {
-			color: var(--light-primary-color);
-		}
-	</style>
+      --paper-menu-focused-item: {
+        background-color: var(--accent-color);
+        color: var(--text-primary-color);
+      };
+    }
+
+    paper-ripple {
+      color: var(--light-primary-color);
+    }
+  </style>
+  <template>
     <paper-menu id="menu">
-			<paper-item>
-				<paper-ripple opacityDecayVelocity="2"></paper-ripple>Male
-			</paper-item>
-			<paper-item>
-				<paper-ripple opacityDecayVelocity="2"></paper-ripple>Female
-			</paper-item>
-		</paper-menu>
+      <paper-item>
+        <paper-ripple opacityDecayVelocity="2"></paper-ripple>Male
+      </paper-item>
+      <paper-item>
+        <paper-ripple opacityDecayVelocity="2"></paper-ripple>Female
+      </paper-item>
+    </paper-menu>
   </template>
   <script>
 
-    const GENDERS = ['male', 'female'];
+    (() => {
+      'use strict';
 
-    class GenderSelector {
-      beforeRegister() {
-        this.is = 'gender-selector';
-        this.properties = {
+      const GENDERS = ['male', 'female'];
+
+      Polymer({
+        is: 'gender-selector',
+
+        properties: {
           invalid: {
             notify: true,
             type: Boolean,
             value: true
           }
-        };
-        this.behaviors = [Polymer.IronFormElementBehavior, Polymer.IronValidatableBehavior, Polymer.IronValidatorBehavior];
-      }
+        },
 
-      validate() {
-        return this.$.menu.selected === 0 || this.$.menu.selected === 1;
-      }
+        behaviors: [Polymer.IronFormElementBehavior, Polymer.IronValidatableBehavior, Polymer.IronValidatorBehavior],
 
-      gender() {
-        return this.$.menu.selected === 0 ? 'Male' : 'Female';
-      }
+        attached: function () {
+          this.querySelector('paper-menu').addEventListener('iron-select', () => this.validate());
+        },
 
-      select(gender) {
-        if (GENDERS.indexOf(gender.toLowerCase()) < 0) {
-          return;
+        validate: function() {
+          if (this.$.menu.selected === 0 || this.$.menu.selected === 1) {
+            this.querySelector('paper-menu').classList.remove('invalid');
+            return true;
+          }
+          this.querySelector('paper-menu').classList.add('invalid');
+          return false;
+        },
+
+        gender: function() {
+          return this.$.menu.selected === 0 ? 'Male' : 'Female';
+        },
+
+        select: function(gender) {
+          if (GENDERS.indexOf(gender.toLowerCase()) < 0) {
+            return;
+          }
+          this.$.menu.selected = GENDERS.indexOf(gender.toLowerCase());
+          this.invalid = false;
+        },
+
+        _invalidChanged: function() {
         }
-        this.$.menu.selected = GENDERS.indexOf(gender.toLowerCase());
-        this.invalid = false;
-      }
-
-      _invalidChanged() {
-      }
-    }
-
-    Polymer(GenderSelector);
+      });
+    })();
   </script>
 </dom-module>
