--- a/website/app/elements/eye-selector/eye-element.html
+++ b/website/app/elements/eye-selector/eye-element.html
@@ -76,7 +76,7 @@
     }
   </style>
   <template>
-    <span id="socket" on-tap="_eyeChosen">
+    <span id="socket" class="closed" on-tap="_eyeChosen">
         <span class="eye">
             <span class="eyelid top"></span>
             <span class="pupil"></span>
