Degrees selector with only integers

--- a/website/app/elements/degrees-selector/degrees-selector.html
+++ b/website/app/elements/degrees-selector/degrees-selector.html
@@ -31,7 +31,7 @@
       },
 
       _degreesSelected: function () {
-        this.fire('degrees-selected', {degrees: this.degrees});
+        this.fire('degrees-selected', {degrees: Math.round(this.degrees)});
       }
     });
   })();
