Send test cases to server and store them to csv on finish

--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -170,7 +170,7 @@
       _showRecord: function (configuration) {
         this.fire('new-record', {
           char: configuration.character,
-          testName: '',
+          testName: this.tests[this.selectedTest].name,
           degrees: configuration.detail,
           eye: configuration.eye
         });
