--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -26,6 +26,7 @@
 
     character-selector {
       padding-top: 90px;
+      padding-right: 50px;
     }
 
     degrees-selector {
@@ -42,7 +43,7 @@
 
     .degress-selector-container {
       position: fixed;
-      width: 30px;
+      width: 90px;
       height: 100%;
       z-index: 10;
       top: 64px;
