Reset test configuration on finish current test

--- a/website/app/elements/character-selector/character-selector.html
+++ b/website/app/elements/character-selector/character-selector.html
@@ -41,6 +41,10 @@
       properties: {
         characters: Array,
         selectedCharacter: String
+      },
+
+      reset: function () {
+        this.querySelector('iron-selector').selected = undefined;
       }
     });
   })();
