--- a/website/app/elements/eye-selector/eye-selector.html
+++ b/website/app/elements/eye-selector/eye-selector.html
@@ -26,7 +26,11 @@
     'use strict';
 
     Polymer({
-      is: 'eye-selector'
+      is: 'eye-selector',
+
+      reset: function () {
+        [].slice.call(this.querySelectorAll('eye-element')).forEach(eye => eye.close());
+      }
     });
   })();
   </script>
