--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -119,7 +119,10 @@
       _reset: function () {
         this.querySelector('iron-pages').selected = '0';
         this.selectedTest = '-1';
+        this.querySelector('degrees-selector').reset();
+        this.querySelector('eye-selector').reset();
         this.querySelector('character-selector').characters = [];
+        this.querySelector('character-selector').reset();
         this._clearConfiguration();
       },
 
