--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -25,7 +25,6 @@
     }
 
     character-selector {
-      padding-top: 90px;
       padding-right: 50px;
     }
 
@@ -34,10 +33,9 @@
     }
 
     .eye-selector-container {
-      position: fixed;
       padding-top: 10px;
       background-color: white;
-      width: calc(100% - 270px);
+      width: calc(100% - 140px);
       z-index: 10;
     }
 
@@ -54,6 +52,16 @@
       height: calc(100% - 72px);
     }
 
+    div.actions {
+      position: absolute;
+      bottom: 20%;
+      width: 100%;
+    }
+
+    div.actions paper-button {
+      width: 45%;
+    }
+
     @media (max-width: 600px) {
 
       .eye-selector-container {
@@ -63,9 +71,24 @@
   </style>
   <template>
     <iron-ajax
+        url="/test"
+        method="post"
+        handle-as="json"
+        content-type="application/json"
+        body='{"operation":"finish"}'
+        id="finishRequest"></iron-ajax>
+    <iron-ajax
+        url="/test"
+        method="post"
+        handle-as="json"
+        content-type="application/json"
+        body='{"operation":"suggest"}'
+        id="suggestRequest"></iron-ajax>
+    <iron-ajax
       url="/test"
       method="post"
-      handle-as="json"></iron-ajax>
+      handle-as="json"
+      id="addRecordRequest"></iron-ajax>
     <iron-pages selected="0">
       <div>
         <paper-menu selected={{selectedTest}}>
@@ -82,6 +105,10 @@
           <degrees-selector on-degrees-selected="_degreesSelected"></degrees-selector>
         </div>
         <character-selector on-character-selected="_characterSelected"></character-selector>
+        <div class="actions">
+          <paper-button on-tap="_suggest">Suggest</paper-button>
+          <paper-button on-tap="_finish">Finish</paper-button>
+        </div>
       </div>
     </iron-pages>
   </template>
@@ -114,10 +141,6 @@
         this.tests = configuration.tests;
       },
 
-      back: function () {
-        this._reset();
-      },
-
       _reset: function () {
         this.querySelector('iron-pages').selected = '0';
         this.selectedTest = '-1';
@@ -132,7 +155,7 @@
         if (this.selectedTest === '-1' || !this.tests) {
           return;
         }
-        let query = this.querySelector('iron-ajax');
+        let query = this.$.addRecordRequest;
         this.querySelector('iron-pages').selected = '1';
         this.querySelector('character-selector').characters = this.tests[this.selectedTest].characters;
         this.fire('test-started');
@@ -146,8 +169,8 @@
       },
 
       _degreesSelected: function (e) {
-        this._clearConfiguration();
         this.currentTestConfiguration.detail = e.detail.degrees;
+        this._updateConfiguration();
       },
 
       _characterSelected: function (e) {
@@ -160,10 +183,13 @@
       },
 
       _updateConfiguration: function () {
+        if (this.selectedTest === '-1') {
+          return;
+        }
         if (!this._isConfigured('eye') || !this._isConfigured('detail') || !this._isConfigured('character')) {
           return;
         }
-        this._notifyServer(this.querySelector('iron-ajax'));
+        this._notifyServer(this.$.addRecordRequest);
         this._showRecord(this.currentTestConfiguration);
       },
 
@@ -185,10 +211,27 @@
         });
       },
 
+      _suggest: function () {
+        this.$.suggestRequest.generateRequest();
+      },
+
+      _finish: function () {
+        this.$.finishRequest.generateRequest();
+        this._reset();
+      },
+
       _showSuggestion: function (suggestion) {
         this.querySelector('degrees-selector').degrees = suggestion.degrees;
         this.querySelector('character-selector').select(suggestion.character);
-        this._showRecord({character: suggestion.character, detail: suggestion.degrees, eye: suggestion.eye});
+        this.querySelector('eye-selector').open(suggestion.eye);
+        this._setConfiguration(suggestion);
+      },
+
+      _setConfiguration: function (suggestion) {
+        this.currentTestConfiguration.character = suggestion.character;
+        this.currentTestConfiguration.detail = suggestion.degrees;
+        this.currentTestConfiguration.eye = suggestion.eye;
+        this._showRecord(this.currentTestConfiguration);
       }
     });
   })();
